--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><i class="fas fa-hand-point-right"></i>    Click into board to leave a Wall</li>
             <li><i class="fas fa-hand-point-right"></i>    Click Start to find path</li>
             <li><i class="fas fa-hand-point-right"></i>    Click Reset to reset</li>
+            <li><i class="fas fa-truck-pickup"></i>    Start Point</li>
+            <li><i class="fas fa-umbrella-beach"></i>    End Point</li>
         </ul>
     </div>
     
